# text-classifier

./: .env.dev  pyproject.toml
experiments/: research.ipynb
services/: base_settings.py
services/classifier/: interface.py  service.py  settings.py
services/telegram_bot/: Dockerfile  main.py  settings.py
