[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Maxim <solumnsilence@gmail.com>"]
readme = "README.md"
packages = [{include = "text_classifier"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

