[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Maxim <solumnsilence@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.bot.dependencies]
python-telegram-bot = "^20.4"


[tool.poetry.group.settings.dependencies]
pydantic-settings = "^2.0.3"


[tool.poetry.group.classifier.dependencies]
sentence-transformers = "^2.2.2"
scikit-learn = "^1.3.0"
torch = ">=2.0.0, !=2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
